# conda-shell

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  tests.yml
condact/: __init__.py  cli.py  logic.py  shell_hookspec.py  shell_manager.py  shell_types.py
condact/plugins/: __init__.py  bash_ose.py  csh_cl.py  csh_ose.py  fish_cl.py  fish_ose.py  posix_cl.py  posix_ose.py  powershell_cl.py  powershell_ose.py
condact/scripts/: bash_ose.sh  csh_tcsh_ose.csh  fish_prep.fish  posix_cl.sh  pprompt.sh  ps_ose.ps1
plugin_manager/: __init__.py  shell_hookspec.py  shell_manager.py  shell_types.py
recipe/: meta.yaml
tests/: conftest.py  test_cli.py  test_logic.py  test_manager.py  test_plugin_manager.py
