[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "conda-shell"
version = "1.0"
description = "Conda shell hook for conda plugin manager"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = ["conda", "pluggy", "pytest", "pytest-mock"]

[project.entry-points.conda]
conda-shell = "cli"

[tool.setuptools]
py-modules = ["cli"]