[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "condact"
version = "1.0"
authors = [{name = "Katherine Abrikian", email = "brickandmill@gmail.com"}]
description = "Conda shell hook and subcommand for shell plugins"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = ["conda", "pluggy", "pytest", "pytest-mock"]

[project.entry-points.conda]
condact = "condact.cli"

[tool.setuptools]
py-modules = ["condact.cli", "condact.logic", "condact.shell_hookspec", "condact.shell_manager", "condact.shell_types"]