[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "condact"
version = "1.0"
authors = [
    {name = "Anaconda, Inc.", email = "conda@continuum.io"},
    {name = "Katherine Abrikian", email = "brickandmill@gmail.com"}
]
description = "Conda shell hook and subcommand for shell plugins"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = ["conda", "pluggy", "pytest", "pytest-mock"]

[project.entry-points.conda]
condact = "condact.cli"

[tool.setuptools]
packages = ["condact"]

[tool.pytest.ini_options]
markers = [
    "osexec: tests use logic for osexec hooks (deselect: '-m \"not osexec\"')",
    "currentlogic: tests use logic compatible with conda's current activation logic (deselect: '-m \"not currentlogic\"')",
]
